# Prompt2Notify

./: .gitignore  LICENSE  README.md  main.py  memory.db-shm  memory.db-wal  pyproject.toml
